--- a/src/app/notes/components/main/notes-add-label/notes-add-label.component.html
+++ b/src/app/notes/components/main/notes-add-label/notes-add-label.component.html
@@ -1,4 +1,4 @@
-<div class="popup-background">
+<div class="popup-background" [ngClass]="{'light-mode': !isDarkMode}">
     <div class="edit-labels">
         <h4>Edit labels</h4>
         <div class="create-label">
