--- a/src/app/notes/components/header/header.component.scss
+++ b/src/app/notes/components/header/header.component.scss
@@ -1,12 +1,16 @@
-header {
+@import '/src/styles/shared-styles.scss';
+
+.header-menu {
     display: flex;
     align-items: center;
     padding: 0.5rem;
     border-top: 1px solid rgb(95, 99, 104);
     border-bottom: 1px solid rgb(95, 99, 104);
-    p{
+
+    p {
         margin: 0;
     }
+
     .icon {
         display: flex;
         position: relative;
@@ -45,7 +49,6 @@ header {
         align-items: center;
         border-radius: 0.275rem;
         background-color: rgb(82, 83, 85);
-        color: rgb(189, 189, 189);
         padding: 0.5rem;
 
         &>i {
@@ -60,7 +63,6 @@ header {
             height: 1.5rem;
             width: 100%;
             color: rgb(189, 189, 189);
-            ;
             background-color: transparent;
         }
     }
@@ -74,17 +76,33 @@ header {
         justify-content: flex-end;
 
         .icon {
-            &>p {
+            &>.name {
                 position: absolute;
                 width: max-content;
                 padding: 0.15rem;
                 border-radius: 0.25rem;
-                bottom: -1rem;
+                bottom: -1.5rem;
+                z-index: 8;
                 text-align: center;
                 font-size: small;
-                background-color: rgba(82, 83, 85, 0.67);
+                background-color: rgba(82, 83, 85);
             }
         }
 
+    }
+}
+
+.light-mode {
+    border-top: 1px solid $light-border-color;
+    border-bottom: 1px solid $light-border-color;
+
+    &>.search {
+        background-color: $light-search-background-color;
+
+        &>i,
+        input {
+            color: $light-search-color;
+            background-color: transparent;
+        }
     }
 }
