--- a/src/app/notes/components/main/content/content.component.scss
+++ b/src/app/notes/components/main/content/content.component.scss
@@ -1,3 +1,5 @@
+@import '/src/styles/shared-styles.scss';
+
 .contents {
     display: flex;
     flex-direction: column;
@@ -5,9 +7,11 @@
     height: 40rem;
     overflow-y: auto;
     overflow-x: hidden;
-    p{
+
+    p {
         margin: 0;
     }
+
     &:hover {
         width: auto;
     }
@@ -29,8 +33,27 @@
         align-items: center;
         padding: 0.75rem;
         cursor: pointer;
+
         &:hover {
             background-color: rgba(84, 84, 84, 0.245);
         }
+    }
+}
+
+.light-mode {
+    background-color: $light-background-color;
+
+    &::-webkit-scrollbar {
+        &-thumb {
+            background-color: $light-scroll-color;
+        }
+    }
+
+    .active-link {
+        background-color: $light-active-link-background-color;
+    }
+
+    .side:hover {
+        background-color: $light-icon-hover-background-color;
     }
 }
