--- a/src/app/notes/components/main/note-display/label-editor/label-editor.component.html
+++ b/src/app/notes/components/main/note-display/label-editor/label-editor.component.html
@@ -1,4 +1,4 @@
-<div class="label-editor">
+<div class="label-editor" [ngClass]="{'light-mode': !isDarkMode}">
     <h4 class="header">Label note</h4>
     <div class="search-label">
         <input type="text" placeholder="Enter label name" [(ngModel)]="searchLabel" />
@@ -6,7 +6,7 @@
     </div>
     <div class="label-display">
         <div class="label" *ngFor="let item of filterLabels()">
-            <input type="checkbox" [checked]="note?.labels?.includes(item)" (change)="changeLabels($event, item)"/>
+            <input type="checkbox" [checked]="note?.labels?.includes(item)" (change)="changeLabels($event, item)" />
             <p>{{item}}</p>
         </div>
     </div>
