--- a/src/app/notes/components/main/note-display/note-display.component.scss
+++ b/src/app/notes/components/main/note-display/note-display.component.scss
@@ -1,3 +1,5 @@
+@import '/src/styles/shared-styles.scss';
+
 .note-display {
     display: flex;
     flex-direction: column;
@@ -39,10 +41,10 @@
             width: max-content;
             padding: 0.15rem;
             border-radius: 0.25rem;
-            bottom: -1rem;
+            bottom: -1.5rem;
             text-align: center;
             font-size: small;
-            background-color: rgba(82, 83, 85, 0.67);
+            background-color: rgba(82, 83, 85);
         }
     }
 
@@ -53,7 +55,8 @@
         height: 60rem;
 
     }
-    &>.empty{
+
+    &>.empty {
         position: absolute;
         display: flex;
         flex-direction: column;
@@ -61,15 +64,28 @@
         gap: 2rem;
         top: 40%;
         justify-content: center;
-        &>p{
+
+        &>p {
             font-size: 1.5rem;
             color: rgb(154, 160, 166);
         }
-        &>i{
+
+        &>i {
             font-size: 5rem;
-            color: rgb(55,56,58);
+            color: rgb(55, 56, 58);
         }
     }
+}
 
+.light-mode {
 
+    &>.empty {
+        i {
+            color: $light-empty-icon-color
+        }
+
+        p {
+            color: $light-empty-text-color
+        }
+    }
 }
