--- a/src/app/notes/components/main/note-display/single-note/single-note/single-note.component.scss
+++ b/src/app/notes/components/main/note-display/single-note/single-note/single-note.component.scss
@@ -1,3 +1,5 @@
+@import '/src/styles/shared-styles.scss';
+
 .single-note {
     display: flex;
     flex-direction: column;
@@ -56,14 +58,13 @@
 
             &>header {
                 width: 12rem;
-                color: rgb(204, 204, 204);
                 font-weight: bold;
                 margin-bottom: 5px;
                 text-align: justify;
             }
 
             &>.empty {
-                color: rgb(204, 204, 204);
+                color: rgba(204, 204, 204, 0.5);
                 font-size: 1.5rem;
             }
 
@@ -95,9 +96,11 @@
         padding: 0.25rem;
         width: 7rem;
         border-radius: 0.5rem;
-        &>i{
+
+        &>i {
             margin-right: 0.15rem;
         }
+
         &>p,
         i {
             font-size: small;
@@ -119,7 +122,7 @@
                 z-index: 7;
                 text-align: center;
                 font-size: small;
-                background-color: rgba(82, 83, 85, 0.67);
+                background-color: rgb(82, 83, 85);
             }
         }
 
@@ -149,5 +152,31 @@
             z-index: 5;
             bottom: -10.5rem;
         }
+    }
+}
+
+.light-mode {
+    border: 1px solid $light-border-color;
+    box-shadow: none;
+
+    &>.info {
+        &>main {
+            .empty {
+                color: $light-empty-text-color;
+            }
+        }
+    }
+
+    &>footer {
+        &>.label-editor-component {
+            background-color: $light-background-color;
+        }
+    }
+
+    &>.labels>p,
+    span,
+    .remainder {
+        border: none;
+        background-color: $light-icon-hover-background-color;
     }
 }
